--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,7 +13,7 @@ body {
     max-width: 800px;
     width: 100%;
     margin: 0 auto 10px;
-    padding: 0 10px;
+    padding: 0;
     display: block;
 }
 
