--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,8 +1,18 @@
+.google-sans {
+    font-family: "Google Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings:
+      "GRAD" 0;
+  }
+
+  
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Google Sans", Arial, sans-serif;
     max-width: 800px;
-    margin: 50px auto;
     padding: 20px;
+    margin: auto;
     padding-left: calc(400px + 20px);
     padding-right: calc(400px + 20px);
     background: #f5f5f5;
