--- a/public/css/main.css
+++ b/public/css/main.css
@@ -215,7 +215,7 @@ body {
         transform: translateX(0);
     }
     100% {
-        transform: translateX(calc(-315px * 10));
+        transform: translateX(var(--scroll-distance, calc(-315px * 10)));
     }
 }
 
