--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,7 +7,7 @@
       "GRAD" 0;
   }
 
-  
+
 body {
     font-family: "Google Sans", Arial, sans-serif;
     max-width: 800px;
@@ -30,6 +30,21 @@ body {
 .top-banner img {
     width: 100%;
     max-height: 120px;
+    height: auto;
+    display: block;
+    object-fit: contain;
+}
+
+.bottom-banner {
+    max-width: 800px;
+    width: 100%;
+    margin: 0 auto 10px;
+    display: block;
+}
+
+.bottom-banner img {
+    width: 100%;
+    max-height: 800px;
     height: auto;
     display: block;
     object-fit: contain;
